--- a/index.html
+++ b/index.html
@@ -18,6 +18,61 @@
 
 <body>
   <header class="header">
+    <div class="header__menu">
+      <div class="header__menu-btn">
+        <span class="material-icons">
+          menu
+        </span>
+      </div>
+      <div class="header__menu-list">
+        <div class="header__logo">
+          <a href="#" class="header_link">
+            <img
+              src="https://kstatic.googleusercontent.com/files/f4b4fbcc6119576da7ab3f68270196009fc1b16f1927910842d793c385115593b6dd5fbe9a1e21fe64f3cbbc509c3a02c95ebc9635f76c355282482986f1fe7d"
+              alt="logo-driver" />
+            <div class="header__logo-container">
+              <h4 class="header__logo--google logo-google">Google</h4>
+              <p class="header__logo--product">Drive</p>
+            </div>
+          </a>
+        </div>
+        <ul class="list-1">
+          <li class="list-1-items">
+            <div class="list-1-name">Cá nhân</div>
+            <ul>
+              <li>Truy cập vào Drive</li>
+              <li>Tải xuống</li>
+              <li>Google One</li>
+            </ul>
+          </li>
+
+          <li class="list-1-items">
+            <div class="list-1-name">Nhóm</div>
+            <ul>
+              <li>Tính năng</li>
+              <li>Khách hàng</li>
+              <li>Tài nguyên</li>
+              <li>Tải xuống</li>
+            </ul>
+          </li>
+
+          <li class="list-1-items">
+            <div class="list-1-name">Doanh nghiệp</div>
+          </li>
+
+          <li class="list-1-items">
+            <div class="list-1-name">Tải xuống</div>
+          </li>
+        </ul>
+        <div class="buttons">
+          <a href="#" class="btn-go">Truy cập vào Drive</a>
+          <a href="#" class="btn-try">Dùng thử Drive cho nhóm của bạn</a>
+        </div>
+      </div>
+    </div>
+
+
+    </div>
     <div class="header__logo">
       <a href="#" class="header_link">
         <img
@@ -200,10 +255,10 @@
                   src="https://kstatic.googleusercontent.com/files/56d87c8f379a15041193391b51180fbb5935b90f781e9fd4c986c708a7bba4feb63e4a2bedd40f59781db773aed145886961efa322e1132a0ffbd5cf89841399">
               </div>
               <div class="drive__customers-sliders-heading">
-                <h3>
+                <p>
                   “Tôi sẽ không còn phải lo lắng về việc tìm tài liệu nữa. Mọi thứ đều nằm trong Drive và tôi có thể
                   truy cập ở bất cứ đâu. Thật là một cuộc cách mạng.
-                </h3>
+                </p>
               </div>
               <div class="drive__customers-sliders-link">
                 <a href="#">Read Story</a>
@@ -215,13 +270,13 @@
                   src="https://kstatic.googleusercontent.com/files/80c8d2dd793b6a865b5f8cac21246517692bba8fe06fdde8ff60acac370e0c882c64f2e152ab697cd32a3fcf8057a0b374aa506263d70ac45c59e2a8d9906ed3">
               </div>
               <div class="drive__customers-sliders-heading">
-                <h3>
+                <p>
                   “Hầu hết thành viên trong nhóm chúng tôi đều đã quen dùng Drive và thấy Drive rất trực
                   quan
                   và dễ sử dụng. Vì vậy, chúng tôi không cần phải tập cách thích nghi và nhanh chóng sử
                   dụng
                   được ứng dụng này.”
-                </h3>
+                </p>
               </div>
               <div class="drive__customers-sliders-link">
                 <a href="#">Read Story</a>
@@ -233,11 +288,11 @@
                   src="https://kstatic.googleusercontent.com/files/bbc0f51e62b28b6d86582618198a8b59035e516a8c57c310903133492fe99ce6895132d610ce3e08f515f8546c1775a686a361196720f20aa55a5de2fc46d78a">
               </div>
               <div class="drive__customers-sliders-heading">
-                <h3>
+                <p>
                   “Việc cộng tác theo thời gian thực thông qua Google Tài liệu và Drive là một nhu cầu thiết yếu. Nếu
                   chúng tôi không cho nhân viên những sử dụng công cụ này, thì có thể làm nảy sinh nhiều mâu thuẫn, thậm
                   chí hỗn loạn."
-                </h3>
+                </p>
               </div>
               <div class="drive__customers-sliders-link">
                 <a href="#">Read Story</a>
@@ -249,11 +304,11 @@
                   src="https://kstatic.googleusercontent.com/files/b5af3d693a691ac5db3db897b94c0d70678313cc3c97f2efa72e873555651b098bf66720d38387649d7f7b195ad53df50f951e3daff8d25823d561f8fb760409">
               </div>
               <div class="drive__customers-sliders-heading">
-                <h3>
+                <p>
                   “Google đang cách mạng hóa việc cộng tác và nâng cao năng suất cá nhân thông qua AI (trí tuệ nhân
                   tạo). Các nhân viên có thể tập trung nhiều hơn vào việc giúp ích cho khách hàng thay vì phải làm những
                   công việc nhàm chán.”
-                </h3>
+                </p>
               </div>
               <div class="drive__customers-sliders-link">
                 <a href="#">Read Story</a>
