--- a/index.html
+++ b/index.html
@@ -505,7 +505,113 @@
 
         </div>
       </section>
-      <section class="resources"></section>
+      <section class="resources">
+        <div class="resources__heading">
+          <h2>Resources</h2>
+        </div>
+        <div class="resources__container">
+          <div class="cover_scroll">
+            <div class="scroll">
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/vcggGGHCBGfDfzLo3wVBsORCiQDAMetdIP2F5HkhSXkp8VriiHrfm5-_BAChoX5rL5F4VuJx_Xdy9gbT3-oJ03wS4Z3w9izEvqjkyyk"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Shared Drives Cheat Sheet</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/7Rt8jZhq2EoBXhnDnXizU8KvjVPJpbUZXjd7fCS2ZBlytMGqLZ3UB4sovW5Rkgnaynr_m644LgC65jXRWAh3ummVbtjwuqCNbm4F"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Google Drive YouTube Playlist</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/gxcsIvf4xu52xUtJRZN3xyjHaFjCj8WA7tCVhueEtR7J7g7nbJ07UEE0K8_XPbOfbUTVdmxaaHQcOjP8oez4K41_rF5zLMdnr8el"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Ibotta Case Study</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/vgpXgetJ_Ea1KErv4OX_yTjv1N-r0WhQigtvmN5w5qLsJFAxQK-YhpEJ97UswKuUszqlm_y7UUzSyXifHmadiUhHX8kYR0biPx_WWIU"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">
+                  3 Ways Google Drive Can Boost Your Team's Productivity
+                </div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/KghBviwrChiCfOIv3ZLzjdoP7TLw2WHGye-L6HVcD_tsH2KR8v8s6m3ATrWJNgA-z_Epf-EImqZ5q-BF1HtWZ1IcRL1OwBvJn4Nk"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">
+                  5 Ways Your Team Can Start Collaborating with Google Drive
+                </div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/jUAmr0BMcLzT0mHaZIK-o_1JPcrkozgEIkgGJXfyfGD9CAvu0vuxkZ1jJ_nzRE5ZOu6VfKc7E75P4tfs282h_VS0lRceD6qris4TSbE"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Cardinal Group Case Study</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/aUU5FrBysAKYHEkylRE8feg9H2qn9YAifUBlrqHPeb26Pw4dqKFqneHHoC6i-dH8o4ur-b9tR5RHRbfM2BooPDGkELxnSgXI1JDT"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Getting Started with Drive</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/X2U4aJ0BTM8vVGC3Z9AfZtkT2yEbm9f0KibL6jN8FQUlXP4BK-ML-j78wwCs5k_UjcL7AxgadJSKyNCkX2l_sEqETA9vpYhoMw3f0A"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Google Drive Training and Help</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+              <div class="cart">
+                <div class="cart_img">
+                  <img
+                    src="https://lh3.googleusercontent.com/7Rt8jZhq2EoBXhnDnXizU8KvjVPJpbUZXjd7fCS2ZBlytMGqLZ3UB4sovW5Rkgnaynr_m644LgC65jXRWAh3ummVbtjwuqCNbm4F"
+                    alt="Icon" />
+                </div>
+                <div class="cart_title">Google Drive YouTube Playlist</div>
+                <div class="cart_btn">Read more</div>
+              </div>
+            </div>
+
+
+            <div class="resources_dri drive__customers-btn btn-prev-slider">
+              <span class="material-icons">
+                chevron_left
+              </span>
+            </div>
+            <div class="resources_dri drive__customers-btn btn-next-slider">
+              <span class="material-icons">
+                chevron_right
+              </span>
+            </div>
+          </div>
+      </section>
     </section>
 
 
