--- a/index.html
+++ b/index.html
@@ -507,7 +507,7 @@
       </section>
       <section class="resources">
         <div class="resources__heading">
-          <h2>Resources</h2>
+          <h2>Tài nguyên</h2>
         </div>
         <div class="resources__container">
           <div class="cover_scroll">
@@ -518,8 +518,8 @@
                     src="https://lh3.googleusercontent.com/vcggGGHCBGfDfzLo3wVBsORCiQDAMetdIP2F5HkhSXkp8VriiHrfm5-_BAChoX5rL5F4VuJx_Xdy9gbT3-oJ03wS4Z3w9izEvqjkyyk"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Shared Drives Cheat Sheet</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Bản tóm tắt về nội dung dùng</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -527,8 +527,8 @@
                     src="https://lh3.googleusercontent.com/7Rt8jZhq2EoBXhnDnXizU8KvjVPJpbUZXjd7fCS2ZBlytMGqLZ3UB4sovW5Rkgnaynr_m644LgC65jXRWAh3ummVbtjwuqCNbm4F"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Google Drive YouTube Playlist</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Danh sách phát trên Youtube trong Google Drive</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -536,8 +536,8 @@
                     src="https://lh3.googleusercontent.com/gxcsIvf4xu52xUtJRZN3xyjHaFjCj8WA7tCVhueEtR7J7g7nbJ07UEE0K8_XPbOfbUTVdmxaaHQcOjP8oez4K41_rF5zLMdnr8el"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Ibotta Case Study</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Nghiên cứu điển hình của Ibotta</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -546,9 +546,9 @@
                     alt="Icon" />
                 </div>
                 <div class="cart_title">
-                  3 Ways Google Drive Can Boost Your Team's Productivity
+                  3 cách giúp nhóm bạn tăng năng suất thông qua Google Drive
                 </div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -557,9 +557,9 @@
                     alt="Icon" />
                 </div>
                 <div class="cart_title">
-                  5 Ways Your Team Can Start Collaborating with Google Drive
+                  5 cách giúp nhóm của bạn bắt đầu cộng tác thông qua Google Drive
                 </div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -567,8 +567,8 @@
                     src="https://lh3.googleusercontent.com/jUAmr0BMcLzT0mHaZIK-o_1JPcrkozgEIkgGJXfyfGD9CAvu0vuxkZ1jJ_nzRE5ZOu6VfKc7E75P4tfs282h_VS0lRceD6qris4TSbE"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Cardinal Group Case Study</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Nghiên cứu điển hình của nhóm Cardinal</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -576,8 +576,8 @@
                     src="https://lh3.googleusercontent.com/aUU5FrBysAKYHEkylRE8feg9H2qn9YAifUBlrqHPeb26Pw4dqKFqneHHoC6i-dH8o4ur-b9tR5RHRbfM2BooPDGkELxnSgXI1JDT"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Getting Started with Drive</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Bắt đầu sử dụng Drive</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -585,8 +585,8 @@
                     src="https://lh3.googleusercontent.com/X2U4aJ0BTM8vVGC3Z9AfZtkT2yEbm9f0KibL6jN8FQUlXP4BK-ML-j78wwCs5k_UjcL7AxgadJSKyNCkX2l_sEqETA9vpYhoMw3f0A"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Google Drive Training and Help</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Chương trình đào tạo và trợ giúp về Google Drive</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
               <div class="cart">
                 <div class="cart_img">
@@ -594,8 +594,8 @@
                     src="https://lh3.googleusercontent.com/7Rt8jZhq2EoBXhnDnXizU8KvjVPJpbUZXjd7fCS2ZBlytMGqLZ3UB4sovW5Rkgnaynr_m644LgC65jXRWAh3ummVbtjwuqCNbm4F"
                     alt="Icon" />
                 </div>
-                <div class="cart_title">Google Drive YouTube Playlist</div>
-                <div class="cart_btn">Read more</div>
+                <div class="cart_title">Danh sách phát trên Youtuve trong Google Drive</div>
+                <div class="cart_btn">Đọc thêm</div>
               </div>
             </div>
 
