--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
   <link rel="stylesheet" href="./css/footer.css" />
   <link rel="stylesheet" href="./css/animation.css" />
   <link rel="stylesheet" href="./css/responsive.css" />
+  <link rel="icon" type="image/x-icon" href="/img/logo.png" />
   <title>Google Drive</title>
 </head>
 
@@ -70,8 +71,6 @@
         </div>
       </div>
     </div>
-
-
     </div>
     <div class="header__logo">
       <a href="#" class="header_link">
@@ -105,8 +104,6 @@
       <a href="#" class="btn-go">Truy cập vào Drive</a>
       <a href="#" class="btn-try">Dùng thử Drive cho nhóm của bạn</a>
     </div>
-
-
   </header>
   <main class="page">
     <section class="drives">
@@ -686,7 +683,6 @@
     </section>
 
   </footer>
-
   <script src="./js/animation.js"></script>
   <script src="./js/slider.js"></script>
 </body>
